tests/parser/fail/v32_fail_embed_dynamic.ep
# COMPILE_FAIL_CONTAINS: Expected STRING
fun main(): void {
    let path = "payload.txt"
    let value = embed path
}
